--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ cover/
 
 # Django stuff:
 *.log
+logs/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -164,12 +165,14 @@ cython_debug/
 .DS_Store
 
 # VS Code
+.vscode/
 **/.vscode/.ropeproject/**
 **/testFiles/**/.cache/**
 *.noseids
 .nyc_output
 .vscode-test
 __pycache__
+__pycache__/
 npm-debug.log
 **/.mypy_cache/**
 !yarn.lock
