Feature: Pydantic vaidation and necessary adjustment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
 name: CI
 
 on:
+  pull_request:
+    branches:
+      - develop
   push:
     branches:
       - main
-      - develop
 
 jobs:
   test:
@@ -28,4 +30,4 @@ jobs:
     - name: Run tests
       run: |
         source venv/bin/activate
-        pytest
+        pytest --maxfail=3 --disable-warnings
