--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+annotated-types==0.7.0
+    # via pydantic
 black==24.10.0
     # via -r requirements.in
 certifi==2024.8.30
@@ -38,6 +40,10 @@ pluggy==1.5.0
     # via pytest
 pycodestyle==2.12.1
     # via flake8
+pydantic==2.10.2
+    # via -r requirements.in
+pydantic-core==2.27.1
+    # via pydantic
 pyflakes==3.2.0
     # via flake8
 pytest==8.3.3
@@ -51,6 +57,9 @@ python-dotenv==1.0.1
 requests==2.32.3
     # via -r requirements.in
 typing-extensions==4.12.2
-    # via mypy
+    # via
+    #   mypy
+    #   pydantic
+    #   pydantic-core
 urllib3==2.2.3
     # via requests
