--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,57 @@
-name: CI
+name: CI - Code Testing Workflow
 
 on:
   pull_request:
     branches:
       - develop
+      - main
+      - "feature/*"
+      - "hotfix/*"
+    paths:
+      - "src/**"
+      - "tests/**"
   push:
     branches:
       - main
+      - develop
+    paths:
+    - "src/**"
+    - "tests/**"
 
 jobs:
   test:
+    name: Run Tests and Generate Coverage Report
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # Step 1: Checkout the repository code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.9"
+      # Step 2: Set up Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
 
-    - name: Install dependencies
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m venv venv                     # Create a virtual environment
+          source venv/bin/activate                # Activate the virtual environment
+          pip install -r requirements.txt         # Install required dependencies
+          pip install pytest pytest-cov           # Add coverage tools
 
-    - name: Run tests
-      run: |
-        source venv/bin/activate
-        pytest --maxfail=3 --disable-warnings
+      # Step 4: Run tests with coverage
+      - name: Run tests with coverage
+        run: |
+          source venv/bin/activate                # Ensure the virtual environment is active
+          pytest --maxfail=3 --disable-warnings --cov=src --cov-report=xml --cov-report=term
+
+      # Step 5: Upload coverage to Codecov (only for pull requests)
+      - name: Upload coverage to Codecov
+        if: github.event_name == 'pull_request'   # Only run this step for pull requests
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}    # CODECOV_TOKEN from repository secrets
