--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ on:
       - main
       - develop
     paths:
-    - "src/**"
-    - "tests/**"
+      - "src/**"
+      - "tests/**"
 
 jobs:
   test:
@@ -46,12 +46,11 @@ jobs:
       - name: Run tests with coverage
         run: |
           source venv/bin/activate                # Ensure the virtual environment is active
-          pytest --maxfail=3 --disable-warnings --cov=src --cov-report=xml --cov-report=term
+          pytest --cov=src --cov-report=xml --cov-report=term
 
-      # Step 5: Upload coverage to Codecov (only for pull requests)
-      - name: Upload coverage to Codecov
-        if: github.event_name == 'pull_request'   # Only run this step for pull requests
-        uses: codecov/codecov-action@v3
+      # Step 5: Post coverage summary as PR comment
+      - name: Post coverage summary as PR comment
+        if: github.event_name == 'pull_request'
+        uses: machine-learning-apps/pytest-coverage-comment@v1.0.0
         with:
-          file: ./coverage.xml
-          token: ${{ secrets.CODECOV_TOKEN }}    # CODECOV_TOKEN from repository secrets
+          pytest-cov-path: coverage.xml
