--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ charset-normalizer==3.4.0
     # via requests
 click==8.1.7
     # via black
+coverage[toml]==7.6.8
+    # via pytest-cov
 flake8==7.1.1
     # via -r requirements.in
 idna==3.10
@@ -49,7 +51,10 @@ pyflakes==3.2.0
 pytest==8.3.3
     # via
     #   -r requirements.in
+    #   pytest-cov
     #   pytest-mock
+pytest-cov==6.0.0
+    # via -r requirements.in
 pytest-mock==3.14.0
     # via -r requirements.in
 python-dotenv==1.0.1
