--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,15 @@ on:
     paths:
       - "src/**"
       - "tests/**"
-  push:
-    branches:
-      - main
-      - develop
-    paths:
-      - "src/**"
-      - "tests/**"
+
+permissions:
+  contents: write
+  pull-requests: write
+  checks: write
 
 jobs:
   test:
-    name: Run Tests and Generate Coverage Report
+    name: Run Tests and Post Coverage
     runs-on: ubuntu-latest
 
     steps:
@@ -39,20 +37,20 @@ jobs:
         run: |
           python -m venv venv                     # Create a virtual environment
           source venv/bin/activate                # Activate the virtual environment
-          pip install -r requirements.txt         # Install required dependencies
-          pip install pytest pytest-cov           # Add coverage tools
+          pip install --upgrade pip               # Upgrade pip
+          pip install pytest pytest-cov           # Install coverage tools
+          pip install -r requirements.txt         # Install project dependencies
 
       # Step 4: Run tests with coverage
       - name: Run tests with coverage
         run: |
-          source venv/bin/activate                # Ensure the virtual environment is active
-          pytest --maxfail=3 --disable-warnings --cov=src --cov-report=xml --cov-report=term
+          source venv/bin/activate
+          pytest --cov=src --cov-report=xml --cov-report=term > coverage.txt
+          pytest --junitxml=pytest.xml
 
-      # Step 5: Post coverage summary as a PR comment
-      - name: Post coverage summary
-        if: github.event_name == 'pull_request'
-        uses: mikepenz/comment-action@v2
+      # Step 5: Post coverage summary to the pull request
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
         with:
-          message: |
-            ## Test Coverage Summary
-            $(cat coverage.xml | sed -n '/<coverage/,/<\/coverage>/p' | sed -e 's/<[^>]*>//g' | head -n 10)
+          pytest-coverage-path: ./coverage.txt
+          junitxml-path: ./pytest.xml
