--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
     name: Run Tests and Post Coverage
     runs-on: ubuntu-latest
 
+    env:  # Load environment variables from repository secrets
+      BASE_URL: ${{ secrets.BASE_URL }}
+      API_KEY: ${{ secrets.API_KEY }}
+      WEBHOOK_SECRET: ${{ secrets.WEBHOOK_SECRET }}
+
     steps:
       # Step 1: Checkout the repository code
       - name: Checkout code
